--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -14,63 +13,77 @@
         android:layout_height="100dp"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="60dp"
-        android:src="@drawable/vamsigro"
-        />
+        android:src="@drawable/vamsigro" />
+
     <TextView
-        android:layout_width="220dp"
         android:id="@+id/app_slogan"
+        android:layout_width="220dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
-        android:layout_marginEnd="88dp"
+        android:layout_alignParentEnd="true"
         android:layout_marginTop="160dp"
-        android:text="Find and buy anything"
+        android:layout_marginEnd="88dp"
+        android:text="Your onestop for groceries"
         android:textAlignment="center"
         android:textColor="@color/colorPrimary"
         android:textSize="22sp"
-        android:textStyle="bold|italic"
-        />
+        android:textStyle="bold|italic" />
+
+    <com.facebook.login.widget.LoginButton
+        android:id="@+id/faceboook_sign_in"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/google_sign_in"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginBottom="5dp"
+        android:padding="25dp"
+        android:visibility="invisible" />
+
     <Button
         android:id="@+id/google_sign_in"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="20dp"
+        android:layout_above="@id/main_join_now_btn"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
         android:layout_marginBottom="5dp"
-        android:textSize="20sp"
-        android:textAllCaps="false"
-        android:text="Sign in with google"
-        android:layout_above="@id/main_join_now_btn"
         android:background="@color/colorPrimaryDark"
-        />
+        android:padding="20dp"
+        android:text="Sign in with google"
+        android:textAllCaps="false"
+        android:textSize="20sp" />
+
     <Button
         android:id="@+id/main_login_btn"
-        android:layout_alignParentBottom="true"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_marginBottom="10dp"
+        android:layout_alignParentBottom="true"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
+        android:layout_marginBottom="10dp"
         android:background="@drawable/buttons"
         android:padding="20dp"
-        android:textAllCaps="false"
-        android:textSize="20sp"
         android:text="Sign In"
+        android:textAllCaps="false"
         android:textColor="@color/white"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:textSize="20sp" />
+
     <Button
         android:id="@+id/main_join_now_btn"
-        android:layout_marginBottom="5dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/main_login_btn"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
+        android:layout_marginBottom="5dp"
         android:background="@drawable/input_design"
         android:padding="20dp"
-        android:layout_above="@+id/main_login_btn"
-        android:textAllCaps="false"
-        android:textSize="20sp"
         android:text="Register"
+        android:textAllCaps="false"
         android:textColor="@color/white"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:textSize="20sp" />
 </RelativeLayout>
