--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,6 +40,9 @@
         android:layout_marginRight="15dp"
         android:layout_marginBottom="5dp"
         android:padding="25dp"
+        android:text="Sign in with facebook"
+        android:textAllCaps="false"
+        android:textSize="20sp"
         android:visibility="invisible" />
 
     <Button
