--- a/app/src/main/res/drawable-v24/buttons1.xml
+++ b/app/src/main/res/drawable-v24/buttons1.xml
@@ -4,5 +4,9 @@
         android:color="@color/colorPrimary"
         ></solid>
     <corners
-        android:radius="32dp"></corners>
+        android:topLeftRadius="16dp"
+        android:topRightRadius="16dp"
+        >
+
+    </corners>
 </shape>
