--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -29,7 +29,8 @@
         android:layout_marginRight="15dp"
         android:hint="Username(atleast 6 characters)"
         android:inputType="text"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
         android:textSize="17sp"
         android:textStyle="bold">
 
@@ -46,7 +47,8 @@
         android:layout_marginRight="15dp"
         android:hint="Phone number"
         android:inputType="number"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColorHint="@color/white"
+        android:textColor="@color/white"
         android:textSize="17sp"
         android:textStyle="bold">
 
@@ -64,7 +66,8 @@
         android:layout_marginRight="15dp"
         android:hint="Password(atleast 6 characters)"
         android:inputType="textPassword"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
         android:textSize="17sp"
         android:textStyle="bold">
     </EditText>
@@ -80,27 +83,11 @@
         android:layout_marginRight="15dp"
         android:hint="Confirm Password"
         android:inputType="textPassword"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
         android:textSize="17sp"
         android:textStyle="bold">
     </EditText>
-<!--    <EditText-->
-<!--        android:id="@+id/register_type_user_input"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_below="@+id/register_confirm_password_input"-->
-<!--        android:background="@drawable/input_design"-->
-<!--        android:layout_marginTop="6dp"-->
-<!--        android:padding="20dp"-->
-<!--        android:layout_marginLeft="15dp"-->
-<!--        android:layout_marginRight="15dp"-->
-<!--        android:hint="Type of user-customer,retailer,wholesaler"-->
-<!--        android:inputType="text"-->
-<!--        android:textColor="@color/colorPrimaryDark"-->
-<!--        android:textColorHint="@color/colorPrimaryDark"-->
-<!--        android:textSize="17sp"-->
-<!--        android:textStyle="bold">-->
-<!--    </EditText>-->
     <Spinner
         android:id="@+id/register_type_user_input"
         android:layout_width="match_parent"
@@ -109,12 +96,14 @@
         android:layout_marginLeft="15dp"
         android:layout_marginTop="6dp"
         android:layout_marginRight="15dp"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
         android:background="@drawable/input_design"
         android:entries="@array/country_arrays"
         android:prompt="@string/country_prompt" />
 
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/register_btn"
         android:layout_below="@id/register_type_user_input"
         android:layout_marginTop="10dp"
