--- a/app/src/main/res/layout/product_items_layout.xml
+++ b/app/src/main/res/layout/product_items_layout.xml
@@ -5,8 +5,9 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginTop="20dp"
-    android:layout_marginStart="15dp"
-    android:layout_marginEnd="15dp"
+    android:layout_marginStart="20dp"
+    android:layout_marginEnd="20dp"
+    android:background="@drawable/buttons1"
     app:cardElevation="15dp">
 
     <RelativeLayout
@@ -19,18 +20,19 @@
             android:layout_height="wrap_content"
             android:text="Product Name"
             android:textAlignment="center"
-            android:textSize="20dp"
-            android:textStyle="bold"
+            android:padding="15dp"
+            android:textSize="35dp"
+            android:textStyle="bold|italic"
             android:textColor="@color/colorPrimary"
             />
 
         <ImageView
             android:id="@+id/product_image"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_height="300dp"
             android:layout_below="@+id/product_name"
             android:scaleType="centerCrop"
-            android:layout_marginTop="2dp"
+            android:layout_marginTop="10dp"
             />
 
         <TextView
@@ -39,9 +41,11 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/product_image"
             android:text="Product Price"
+            android:textStyle="bold"
+            android:padding="5dp"
             android:textAlignment="center"
-            android:textSize="18dp"
-            android:textColor="@color/colorPrimaryDark"
+            android:textSize="40dp"
+            android:textColor="@color/colorPrimary"
             />
 
         <TextView
@@ -50,10 +54,24 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/product_price"
             android:text="Product Description"
-            android:layout_marginTop="2dp"
+            android:layout_marginTop="5dp"
+            android:padding="5dp"
+            android:textStyle="italic"
             android:textAlignment="center"
-            android:textSize="16dp"
+            android:textSize="14dp"
             android:textColor="@color/colorPrimaryDark"
+            />
+        <androidx.appcompat.widget.AppCompatButton
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/product_description"
+            android:text="Buy Once"
+            android:layout_marginTop="5dp"
+            android:padding="20dp"
+            android:textStyle="bold"
+            android:textSize="20dp"
+            android:background="@drawable/buttons1"
+
             />
 
     </RelativeLayout>
