--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -15,6 +15,7 @@
     <de.hdodenhof.circleimageview.CircleImageView
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/user_profile_image"
+        android:layout_marginTop="15dp"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:padding="10dp"
@@ -28,7 +29,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
 
-        android:paddingTop="@dimen/nav_header_vertical_spacing"
+        android:paddingTop="5dp"
         android:textSize="20sp"
         android:textStyle="bold"
         android:text="user name"
