--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -102,10 +102,44 @@
         android:entries="@array/country_arrays"
         android:prompt="@string/country_prompt" />
 
+    <LinearLayout
+        android:id="@+id/register_location"
+        android:layout_width="match_parent"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="6dp"
+        android:layout_marginRight="15dp"
+        android:layout_height="60dp"
+        android:layout_below="@+id/register_type_user_input"
+        android:orientation="horizontal">
+        <EditText
+            android:id="@+id/register_location_text"
+            android:layout_width="300dp"
+            android:layout_height="60dp"
+            android:background="@drawable/input_design"
+            android:textColor="@color/white"
+            android:hint="Enter location"
+            android:textColorHint="@color/white"
+            android:layout_marginRight="5dp"
+            android:padding="20dp"
+            android:textStyle="bold"
+            />
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/register_location_btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Get location"
+            android:textColorHint="@color/white"
+            android:background="@drawable/buttons"
+            android:visibility="invisible"
+            />
+
+
+    </LinearLayout>
+
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/register_btn"
-        android:layout_below="@id/register_type_user_input"
+        android:layout_below="@id/register_location"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
