--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -23,7 +23,7 @@
                 android:layout_height="wrap_content"
                 android:text="Close"
                 android:textColor="@color/white"
-                android:textSize="24sp"
+                android:textSize="18sp"
                 android:textStyle="bold"
                 android:layout_alignParentStart="true"
                 />
@@ -34,7 +34,7 @@
                 android:text="Update"
                 android:layout_marginRight="10dp"
                 android:textColor="@color/white"
-                android:textSize="24sp"
+                android:textSize="18sp"
                 android:textStyle="bold"
                 android:layout_alignParentEnd="true"
                 />
@@ -77,15 +77,16 @@
         android:layout_height="wrap_content" />
     <EditText
         android:id="@+id/settings_user_name"
-        android:layout_below="@id/settings_phone_number"
+        android:layout_below="@id/settings_address"
         android:hint="User name"
         android:layout_margin="15dp"
         android:layout_width="match_parent"
+        android:visibility="invisible"
         android:layout_height="wrap_content" />
 
     <EditText
         android:id="@+id/settings_address"
-        android:layout_below="@id/settings_user_name"
+        android:layout_below="@id/settings_phone_number"
         android:hint="Address"
         android:layout_margin="15dp"
         android:layout_width="match_parent"
