--- a/app/src/main/res/layout/product_items_layout.xml
+++ b/app/src/main/res/layout/product_items_layout.xml
@@ -65,7 +65,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/product_description"
-            android:text="Buy Once"
+            android:text="Buy "
+            android:textAllCaps="false"
             android:layout_marginTop="5dp"
             android:padding="20dp"
             android:textStyle="bold"
