--- a/app/src/main/res/layout/activity_retailer_home.xml
+++ b/app/src/main/res/layout/activity_retailer_home.xml
@@ -12,6 +12,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Add New Product"
+        android:textColor="@color/black"
+        android:textStyle="bold"
         android:gravity="center"
         android:layout_marginTop="120dp"
         android:textAlignment="center"
@@ -103,6 +105,30 @@
             />
 
     </LinearLayout>
+
+    <Button
+        android:id="@+id/check_order_btn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_margin="20dp"
+        android:text="Check new Orders"
+        android:textSize="20sp"
+        android:textAllCaps="false"
+        android:textColor="@color/black"
+        />
+    <Button
+        android:id="@+id/retailer_logout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="5dp"
+        android:layout_marginLeft="20dp"
+        android:text="Logout"
+        android:layout_above="@id/check_order_btn"
+        android:textSize="20sp"
+        android:textAllCaps="false"
+        android:textColor="@color/black"
+        />
 
 
 </RelativeLayout>
