--- a/app/src/main/res/layout/product_items_layout.xml
+++ b/app/src/main/res/layout/product_items_layout.xml
@@ -7,7 +7,7 @@
     android:layout_marginTop="20dp"
     android:layout_marginStart="20dp"
     android:layout_marginEnd="20dp"
-    android:background="@drawable/buttons1"
+    android:background="@color/white"
     app:cardElevation="15dp">
 
     <RelativeLayout
