--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@drawable/login_background_png"
     tools:context=".customer.Settings">
 <com.google.android.material.appbar.AppBarLayout
     android:id="@+id/app_bar_settings"
@@ -13,6 +13,7 @@
     <Toolbar
         android:id="@+id/toolbar_settings"
         android:layout_width="match_parent"
+        android:background="@color/colorPrimary"
         android:layout_height="wrap_content">
         <RelativeLayout
             android:layout_width="match_parent"
@@ -67,16 +68,22 @@
         android:layout_marginEnd="131dp"
         android:layout_marginRight="10dp"
         android:text="Change profile"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="28sp" />
     <EditText
+        android:background="@drawable/input_design"
         android:id="@+id/settings_phone_number"
         android:layout_below="@id/profile_image_change_btn"
         android:hint="Phone number"
+        android:inputType="number"
+        android:textColorHint="@color/white"
+        android:textColor="@color/white"
+      android:paddingLeft="10dp"
         android:layout_margin="15dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="50dp" />
     <EditText
+        android:background="@drawable/input_design"
         android:id="@+id/settings_user_name"
         android:layout_below="@id/settings_address"
         android:hint="User name"
@@ -86,10 +93,15 @@
         android:layout_height="wrap_content" />
 
     <EditText
+        android:background="@drawable/input_design"
         android:id="@+id/settings_address"
         android:layout_below="@id/settings_phone_number"
         android:hint="Address"
+        android:inputType="textMultiLine"
+        android:paddingLeft="10dp"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
         android:layout_margin="15dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="100dp" />
 </RelativeLayout>
