--- a/app/src/main/res/layout/activity_forgot.xml
+++ b/app/src/main/res/layout/activity_forgot.xml
@@ -14,6 +14,9 @@
         android:id="@+id/forgot_input"
         android:layout_marginLeft="50dp"
         android:layout_marginRight="50dp"
+        android:paddingLeft="10dp"
+        android:hint="Enter OTP sent to your phone number"
+        android:textColorHint="@color/white"
         android:background="@drawable/input_design"
         android:textColor="@color/white"
         />
@@ -31,6 +34,9 @@
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_marginTop="100dp"
+        android:paddingLeft="10dp"
+        android:textColor="@color/white"
+        android:hint="Password"
         android:id="@+id/forgot_password_input"
         android:layout_below="@id/forgot_submit"
         android:layout_marginLeft="50dp"
@@ -42,6 +48,9 @@
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_marginTop="10dp"
+        android:paddingLeft="10dp"
+        android:textColor="@color/white"
+        android:hint="Confirm Password"
         android:id="@+id/forgot_confirm_password_input"
         android:layout_below="@id/forgot_password_input"
         android:layout_marginLeft="50dp"
