--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -22,6 +22,9 @@
         android:textColor="@color/white"
         android:textSize="25sp"
         android:text="Name"
+        android:textAlignment="center"
+        android:layout_marginRight="50dp"
+        android:layout_marginLeft="50dp"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="50dp" />
 
