--- a/app/src/main/res/layout/activity_retailer_add_category.xml
+++ b/app/src/main/res/layout/activity_retailer_add_category.xml
@@ -13,11 +13,23 @@
         android:layout_height="250dp"
         android:src="@drawable/select_product_image"
         />
+    <TextView
+        android:id="@+id/text"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:text="Click on the camera and select an image from your gallery"
+        android:layout_below="@id/product_image"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp"
+        android:textColor="@color/white"
+        android:textAlignment="center"
+        android:textSize="15sp"
+        />
     <EditText
         android:id="@+id/product_name"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_below="@+id/product_image"
+        android:layout_below="@+id/text"
         android:hint="Product name"
         android:textAlignment="center"
         android:inputType="textMultiLine"
