--- a/app/src/main/res/layout/activity_retailer_customer.xml
+++ b/app/src/main/res/layout/activity_retailer_customer.xml
@@ -27,7 +27,7 @@
         android:id="@+id/products_list"
         android:layout_width="match_parent"
         android:layout_below="@+id/r3"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
 
     </androidx.recyclerview.widget.RecyclerView>
