--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -23,14 +23,15 @@
         android:textSize="25sp"
         android:text="Name"
         android:textAlignment="center"
-        android:layout_marginRight="50dp"
-        android:layout_marginLeft="50dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginLeft="10dp"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="50dp" />
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
+        android:id="@+id/home_user_type"
         android:orientation="vertical" >
 
         <Spinner
@@ -52,6 +53,53 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Submit" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/register_location"
+        android:layout_width="match_parent"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="6dp"
+        android:layout_marginRight="15dp"
+        android:layout_height="60dp"
+        android:layout_above="@+id/logout"
+        android:orientation="horizontal">
+        <EditText
+            android:id="@+id/register_location_text"
+            android:layout_width="150dp"
+            android:layout_height="60dp"
+            android:background="@drawable/input_design"
+            android:textColor="@color/white"
+            android:hint="Address"
+            android:paddingLeft="20dp"
+            android:textColorHint="@color/white"
+            android:visibility="visible"
+            android:textStyle="bold"
+            />
+        <EditText
+            android:id="@+id/register_city_text"
+            android:layout_width="150dp"
+            android:layout_height="60dp"
+            android:background="@drawable/input_design"
+            android:textColor="@color/white"
+            android:hint="City"
+            android:paddingLeft="20dp"
+            android:textColorHint="@color/white"
+            android:visibility="visible"
+            android:textStyle="bold"
+            />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/register_location_btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Get location"
+            android:textColorHint="@color/white"
+            android:background="@drawable/buttons"
+            android:visibility="visible"
+            />
+
 
     </LinearLayout>
 
