--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -10,7 +10,7 @@
     <ImageView
         android:layout_width="300dp"
         android:layout_height="100dp"
-        android:src="@drawable/vamsigro"
+        android:src="@drawable/final_logo"
         android:id="@+id/register_applogo"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="40dp">
@@ -113,16 +113,29 @@
         android:orientation="horizontal">
         <EditText
             android:id="@+id/register_location_text"
-            android:layout_width="300dp"
+            android:layout_width="150dp"
             android:layout_height="60dp"
             android:background="@drawable/input_design"
             android:textColor="@color/white"
-            android:hint="Enter location"
+            android:hint="Address"
             android:paddingLeft="20dp"
             android:textColorHint="@color/white"
-            android:visibility="invisible"
+            android:visibility="visible"
             android:textStyle="bold"
             />
+        <EditText
+            android:id="@+id/register_city_text"
+            android:layout_width="150dp"
+            android:layout_height="60dp"
+            android:background="@drawable/input_design"
+            android:textColor="@color/white"
+            android:hint="City"
+            android:paddingLeft="20dp"
+            android:textColorHint="@color/white"
+            android:visibility="visible"
+            android:textStyle="bold"
+            />
+
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/register_location_btn"
             android:layout_width="match_parent"
@@ -130,7 +143,7 @@
             android:hint="Get location"
             android:textColorHint="@color/white"
             android:background="@drawable/buttons"
-            android:visibility="invisible"
+            android:visibility="visible"
             />
 
 
