--- a/app/src/main/res/layout/product_items_layout.xml
+++ b/app/src/main/res/layout/product_items_layout.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView
+    app:cardBackgroundColor="@color/white"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -61,19 +62,20 @@
             android:textSize="14dp"
             android:textColor="@color/colorPrimaryDark"
             />
-        <androidx.appcompat.widget.AppCompatButton
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/product_description"
-            android:text="Buy "
-            android:textAllCaps="false"
-            android:layout_marginTop="5dp"
-            android:padding="20dp"
-            android:textStyle="bold"
-            android:textSize="20dp"
-            android:background="@drawable/buttons1"
+<!--        <androidx.appcompat.widget.AppCompatButton-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_below="@id/product_description"-->
+<!--            android:text="Buy "-->
+<!--            android:textAllCaps="false"-->
+<!--            android:layout_marginTop="5dp"-->
+<!--            android:padding="20dp"-->
+<!--            android:textStyle="bold"-->
+<!--            android:visibility="invisible"-->
+<!--            android:textSize="20dp"-->
+<!--            android:background="@drawable/buttons1"-->
 
-            />
+<!--            />-->
 
     </RelativeLayout>
 
