--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -29,9 +29,11 @@
         android:layout_marginTop="50dp" />
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:id="@+id/home_user_type"
+        android:layout_below="@+id/register_location"
         android:orientation="vertical" >
 
         <Spinner
@@ -42,7 +44,7 @@
             android:layout_height="wrap_content"
             android:entries="@array/country_arrays"
             android:prompt="@string/country_prompt"
-            android:layout_marginTop="120dp"
+            android:layout_marginTop="16dp"
             />
         <Button
             android:id="@+id/btnSubmit"
@@ -56,14 +58,32 @@
 
     </LinearLayout>
 
+    <EditText
+        android:id="@+id/home_phone_number_input"
+        android:layout_marginTop="16dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/name"
+        android:background="@drawable/input_design"
+        android:padding="20dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:hint="Phone number"
+        android:inputType="phone"
+        android:textColorHint="@color/white"
+        android:textColor="@color/white"
+        android:textSize="17sp"
+        android:textStyle="bold">
+    </EditText>
+
     <LinearLayout
         android:id="@+id/register_location"
         android:layout_width="match_parent"
         android:layout_marginLeft="15dp"
-        android:layout_marginTop="6dp"
+        android:layout_marginTop="16dp"
         android:layout_marginRight="15dp"
         android:layout_height="60dp"
-        android:layout_above="@+id/logout"
+        android:layout_below="@+id/home_phone_number_input"
         android:orientation="horizontal">
         <EditText
             android:id="@+id/register_location_text"
