--- a/app/src/main/res/layout/product_items_layout.xml
+++ b/app/src/main/res/layout/product_items_layout.xml
@@ -62,12 +62,44 @@
             android:textSize="14dp"
             android:textColor="@color/colorPrimaryDark"
             />
+        <LinearLayout
+            android:id="@+id/stocks"
+            android:layout_below="@id/product_description"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/notinstock"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Not in Stock"
+                android:background="@color/red"
+                android:textColor="@color/white"
+                android:visibility="invisible"
+                android:textSize="20sp"
+                />
+
+            <TextView
+                android:id="@+id/instock"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="In Stock"
+                android:background="@color/green"
+                android:visibility="visible"
+                android:textColor="@color/white"
+                android:textSize="20sp"
+                android:layout_marginLeft="180dp"
+
+                />
+
+
+        </LinearLayout>
         <TextView
             android:id="@+id/retailer_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/black"
-            android:layout_below="@id/product_description"
+            android:layout_below="@id/stocks"
             android:text="retailer name"
             android:textAlignment="viewEnd"
             />
