--- a/app/src/main/res/layout/activity_wholesaler_home.xml
+++ b/app/src/main/res/layout/activity_wholesaler_home.xml
@@ -4,56 +4,155 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/login_background_png"
-    tools:context=".wholesaler.WholesalerHomeActivity">
+    android:background="@color/white"
+    tools:context=".retailer.RetailerHomeActivity">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Wholesaler"
-        android:layout_marginTop="50dp"
         android:textAlignment="center"
-        android:textSize="30sp"
-        android:textColor="@color/white"
+        android:textSize="32sp"
+        android:textColor="@color/black"
+        android:layout_marginTop="10dp"
+        android:textStyle="bold"
+
         />
-    <LinearLayout
+
+    <TextView
+        android:id="@+id/wholesaler_add_new"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
+        android:text="Add New Product"
+        android:textColor="@color/black"
+        android:textStyle="bold"
+        android:gravity="center"
         android:layout_marginTop="120dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
-        >
-        <Button
-            android:id="@+id/vegetables_btn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Vegetables"
-            android:background="@drawable/buttons"
-            />
-        <Button
-            android:id="@+id/fruits_btn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Fruits"
-            android:background="@drawable/buttons"
-            />
-        <Button
-            android:id="@+id/dairy_btn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Dairy products"
-            android:background="@drawable/buttons"
-            />
-        <Button
-            android:id="@+id/readymade_btn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Readymade products"
-            android:background="@drawable/buttons"
-            />
+        android:textAlignment="center"
+        android:textSize="30sp"
+        />
+    <LinearLayout
+        android:id="@+id/wholesaler_layout1"
+        android:layout_below="@+id/wholesaler_add_new"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_marginTop="20dp"
+        android:orientation="horizontal">
 
+        <ImageView
+            android:id="@+id/wholesaler_vegetables"
+            android:layout_marginRight="20dp"
+            android:layout_width="80dp"
+            android:layout_height="100dp"
+            android:src="@drawable/veg"
+            android:layout_marginTop="25dp"
+            />
+        <ImageView
+            android:id="@+id/wholesaler_fruits"
+            android:layout_marginRight="20dp"
+            android:layout_width="80dp"
+            android:layout_height="100dp"
+            android:src="@drawable/fruit"
+            android:layout_marginTop="25dp"
+            />
+        <ImageView
+            android:id="@+id/wholesaler_dairy"
+            android:layout_marginRight="20dp"
+            android:layout_width="80dp"
+            android:layout_height="100dp"
+            android:src="@drawable/dairy"
+            android:layout_marginTop="25dp"
+            />
+        <ImageView
+            android:id="@+id/wholesaler_readymade"
+            android:layout_marginRight="20dp"
+            android:layout_width="80dp"
+            android:layout_height="100dp"
+            android:src="@drawable/readymade"
+            android:layout_marginTop="25dp"
+            />
 
     </LinearLayout>
+    <LinearLayout
+        android:id="@+id/wholesaler_layout2"
+        android:layout_below="@+id/wholesaler_layout1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_marginTop="20dp"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/wholesaler_milk"
+            android:layout_marginRight="20dp"
+            android:layout_width="80dp"
+            android:layout_height="100dp"
+            android:src="@drawable/milk"
+            android:layout_marginTop="25dp"
+            />
+        <ImageView
+            android:id="@+id/wholesaler_beverages"
+            android:layout_marginRight="20dp"
+            android:layout_width="80dp"
+            android:layout_height="100dp"
+            android:src="@drawable/bewarages"
+            android:layout_marginTop="25dp"
+            />
+        <ImageView
+            android:id="@+id/wholesaler_breakfast"
+            android:layout_marginRight="20dp"
+            android:layout_width="80dp"
+            android:layout_height="100dp"
+            android:src="@drawable/cornflakes"
+            android:layout_marginTop="25dp"
+            />
+        <ImageView
+            android:id="@+id/wholesaler_foodgrams"
+            android:layout_marginRight="20dp"
+            android:layout_width="80dp"
+            android:layout_height="100dp"
+            android:src="@drawable/foodgrams"
+            android:layout_marginTop="25dp"
+            />
+
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/wholesaler_maintain_btn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/wholesaler_logout"
+        android:layout_margin="20dp"
+        android:text="Maintain products"
+        android:textSize="20sp"
+        android:textAllCaps="false"
+        android:textColor="@color/black"
+        />
+
+    <Button
+        android:id="@+id/wholesaler_check_order_btn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_margin="20dp"
+        android:text="Check new Orders"
+        android:textSize="20sp"
+        android:textAllCaps="false"
+        android:textColor="@color/black"
+        />
+    <Button
+        android:id="@+id/wholesaler_logout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="5dp"
+        android:layout_marginLeft="20dp"
+        android:text="Logout"
+        android:layout_above="@id/wholesaler_check_order_btn"
+        android:textSize="20sp"
+        android:textAllCaps="false"
+        android:textColor="@color/black"
+        />
+
 
 </RelativeLayout>
