--- a/app/src/main/res/layout/activity_ret_product_details.xml
+++ b/app/src/main/res/layout/activity_ret_product_details.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".ProductDetailsActivity">
+    tools:context=".retailer.RetProductDetailsActivity">
 
     <ImageView
         android:layout_marginTop="100dp"
@@ -14,13 +14,13 @@
         android:layout_marginLeft="20dp"
         android:layout_height="200dp"
         android:scaleType="centerCrop"
-        android:id="@+id/product_image_details"
+        android:id="@+id/retailer_product_image_details"
         />
     <TextView
-        android:id="@+id/product_name_details"
+        android:id="@+id/retailer_product_name_details"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/product_image_details"
+        android:layout_below="@id/retailer_product_image_details"
         android:text="Product name"
         android:textColor="@color/black"
         android:textStyle="bold"
@@ -29,10 +29,10 @@
         android:gravity="center"
         />
     <TextView
-        android:id="@+id/product_description_details"
+        android:id="@+id/retailer_product_description_details"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/product_name_details"
+        android:layout_below="@id/retailer_product_name_details"
         android:text="Product description"
         android:textColor="@color/black"
         android:textStyle="bold"
@@ -41,10 +41,10 @@
         android:gravity="center"
         />
     <TextView
-        android:id="@+id/product_price_details"
+        android:id="@+id/retailer_product_price_details"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/product_description_details"
+        android:layout_below="@id/retailer_product_description_details"
         android:text="Product price"
         android:textColor="@color/black"
         android:textStyle="bold"
@@ -55,10 +55,10 @@
 
     <com.cepheuen.elegantnumberbutton.view.ElegantNumberButton
         android:layout_width="wrap_content"
-        android:id="@+id/number_btn"
+        android:id="@+id/retailer_number_btn"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_below="@id/product_price_details"
+        android:layout_below="@id/retailer_product_price_details"
         android:layout_marginTop="10dp"
         android:elevation="6dp"
         app:backGroundColor="@color/colorPrimary"
@@ -68,20 +68,20 @@
         app:textSize="16dp"/>
 
     <RatingBar
-        android:id="@+id/products_rating_bar"
+        android:id="@+id/retailer_products_rating_bar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:layout_below="@id/number_btn"
+        android:layout_below="@id/retailer_number_btn"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:isIndicator="true"
+        android:isIndicator="false"
         android:numStars="5"
         android:rating="1.6"
         />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/add_product_to_cart"
+        android:id="@+id/retailer_add_product_to_cart"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:elevation="6dp"
@@ -91,7 +91,5 @@
         android:layout_margin="15dp"
 
         />
-
-
 
 </RelativeLayout>
